# SD-Roguelike

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yaml
Classes/: AppDelegate.cpp
Include/: AppDelegate.h  BaseEntity.h  GameScene.h
Include/GameLoop/: GameLoop.h  IUpdatable.h
Include/ItemsSystem/: Accessory.h  AttackData.h  AttackHandler.h  AttackSearchFromDFS.h  AttackWithDamage.h  Attacks.h  BaseItem.h  ConsumableItem.h  ConsumableStatItem.h  Damage.h  IAttack.h  IAttackSearch.h  IDealingDamage.h  IItem.h  IVisualAttack.h  Items.h  Weapon.h
Include/ItemsSystem/AttackSearch/: AttackSearchFromDFS.h  AttackSearchFromStraightLines.h  IAttackSearch.h
Include/ItemsSystem/DealingDamage/: DamageFromFunction.h  DelegateDamage.h  IDealingDamage.h  SimpleDamage.h
Include/Mobs/: Mob.h
Include/Mobs/Behaviour/: AggressiveBehaviour.h  CowardlyBehaviour.h  IMobBehaviour.h  PassiveBehaviour.h  ReplicativeBehaviour.h
Include/Mobs/Factory/: BaseMobAbstractFactory.h  MobInfo.h  MobsConfig.h  MobsFactoryFromConfig.h
Include/Mobs/Strategy/: BaseStateStrategy.h  IMobStrategy.h  IState.h  Normal.h  NothingStrategy.h  Panic.h  StateContainer.h  StateMachine.h  StrategyWithStates.h
Include/Movement/: IMovement.h  MoveDirection.h
Include/Pathfinder/: Graph.h  IPathfindingAlgorithm.h  Node.h  Pathfinder.h  PathfinderAStar.h
Include/Player/: Backpack.h  Player.h  PlayerInput.h
Include/Stats/: IHaveStats.h  IStat.h  IStatsContainer.h  LevelHandler.h  StatProxy.h  StatType.h  StatsContainer.h
Include/Stats/Modificators/: BoundsModificator.h  IStatModificator.h  StatWithModificators.h
Include/UI/: Canvas.h  Colors.h  InventoryView.h  MenuItemForInventory.h  PlayerItemsOnUI.h  StatBar.h
Include/Utils/: Common.h  Direction.h  EventsSystem.h  FontsTTF.h  PoolObjects.h  TMXGenerator.h  ValueNotifyChanged.h
Include/WorldSystem/: BaseEntity.h  Chest.h  DamageIndicatorsSystems.h  Decoration.h  FunctionVisitorEntities.h  IVisitorEntities.h  RandomGeneratorWorldBuilder.h  ReadFileWorldBuilder.h  World.h  WorldTileConfig.h
Resources/: Custom.tmx  Template.tmx  TileMap.tmx  World.json  test.tmx
Source/: AppDelegate.cpp  GameScene.cpp
Source/GameLoop/: GameLoop.cpp
Source/ItemsSystem/: Accessory.cpp  AttackHandler.cpp  Attacks.cpp  BaseItem.cpp  Items.cpp  Weapon.cpp
Source/Mobs/: Mob.cpp
Source/Mobs/Behaviour/: AggressiveBehaviour.cpp  CowardlyBehaviour.cpp  PassiveBehaviour.cpp  ReplicativeBehaviour.cpp
Source/Mobs/Factory/: MobInfo.cpp  MobsConfig.cpp
Source/Mobs/Strategy/: Normal.cpp  StateContainer.cpp  StateMachine.cpp  StrategyWithStates.cpp
Source/Movement/: MoveDirection.cpp
Source/Pathfinder/: Pathfinder.cpp  PathfinderAStar.cpp
Source/Player/: Backpack.cpp  Invertory.cpp  Player.cpp  PlayerInput.cpp
Source/Stats/: StatsContainer.cpp
Source/Stats/Modificators/: StatWithModificators.cpp
Source/UI/: Canvas.cpp  InventoryView.cpp  MenuItemForInventory.cpp  PlayerItemsOnUI.cpp  StatBar.cpp  StepCounter.cpp
Source/Utils/: Common.cpp  TMXGenerator.cpp
Source/WorldSystem/: BaseEntity.cpp  DamageIndicatorsSystems.cpp  RandomGeneratorWorldBuilder.cpp  ReadFileWorldBuilder.cpp  World.cpp
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/2d/: CCFastTMXLayer.cpp  CCFastTMXLayer.h  CCFastTMXTiledMap.h
cocos2d/cocos/base/: CCMap.h  CCVector.h  ccConfig.h
cocos2d/cocos/network/: SocketIO.h
cocos2d/cocos/platform/: CCPlatformMacros.h
cocos2d/cocos/ui/: UIImageView.cpp
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/mac/: Info.plist
proj.linux/: main.cpp
src/: AppDelegate.cpp  GameScene.cpp  GameScene.h
src/Commands/: IAttackCommand.h  ICommand.h  IMoveCommand.h  MoveDirectionCommand.cpp  MoveDirectionCommand.h
src/GameLoop/: GameLoop.cpp  GameLoop.h
src/ItemsSystem/: Weapon.h
src/Movement/: MoveDirection.cpp  MoveDirection.h
src/Pathfinder/: Graph.hpp  Node.hpp  Pathfinder.cpp  Pathfinder.hpp
src/Player/: Invertory.cpp  Invertory.h  Player.cpp  Player.h  PlayerInput.cpp
src/Stats/: IHaveStats.h  IStat.h  StatProxy.h  StatsContainer.cpp  StatsContainer.h
src/Stats/Modificators/: StatWithModificators.cpp  StatWithModificators.h
src/UI/: Canvas.cpp  Colors.h  StepCounter.cpp  StepCounter.h
src/Utils/: EventsSystem.h  ValueNotifyChanged.h
src/WorldSystem/: IWorldBuilder.h  ReadFileWorld.cpp  ReadFileWorld.h  ReadFileWorldBuilder.cpp  ReadFileWorldBuilder.h  World.cpp  World.h
tests/: baseTest.cpp  generatorTest.cpp  pathfinderTests.cpp  stateMachineTests.cpp
